1.0.13 - Simplified parsing logic & fixed issues with too many nesting levels